# factorymind

./: .env.example  .gitignore  Makefile  docker-compose.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: cd.yml  ci.yml  model-evaluation.yml
data-engineering/airflow/: requirements.txt
data-engineering/airflow/dags/: data_quality_check.py  dataset_preparation.py  dbt_transform.py  drift_detection.py  model_performance_report.py  model_training.py  raw_data_ingestion.py
data-engineering/dbt/factorymind/: dbt_project.yml  profiles.yml
frontend/: Dockerfile  next.config.js  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/components/analytics/: DefectRateChart.tsx  ModelPerformanceTable.tsx
frontend/src/components/inspections/: InspectionTable.tsx
frontend/src/components/live-feed/: DefectBadge.tsx  LiveFeedPanel.tsx
frontend/src/hooks/: useAuth.ts  useInspections.ts  useLiveFeed.ts
frontend/src/lib/: api.ts  websocket.ts
frontend/src/store/: auth.ts
frontend/src/types/: api.ts
infrastructure/kafka/: create-topics.sh
infrastructure/localstack/: init-buckets.sh
infrastructure/postgres/: init.sql
kubernetes/manifests/ingress/: ingress.yaml
kubernetes/manifests/network-policies/: allow-factorymind.yaml  deny-all.yaml
monitoring/grafana/dashboards/: data-quality.json  inference-performance.json  model-monitoring.json  system-overview.json
monitoring/loki/: loki-config.yaml
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: inference_alerts.yml  system_alerts.yml
monitoring/promtail/: promtail-config.yaml
monitoring/tempo/: tempo.yaml
scripts/: rotate_jwt_secret.py  security_audit.sh
services/api-service/: Dockerfile  alembic.ini  pyproject.toml
services/api-service/src/: main.py
services/api-service/src/api_service/: config.py  container.py  main.py  metrics.py
services/api-service/src/api_service/adapters/: pg_analytics_repo.py  pg_inspection_repo.py  redis_token_store.py
services/api-service/src/api_service/api/: deps.py  middleware.py
services/api-service/src/api_service/api/v1/: analytics.py  auth.py  inspections.py  models.py  websocket.py
services/api-service/src/api_service/interfaces/: i_analytics_repo.py  i_inspection_repo.py  i_token_store.py
services/api-service/src/api_service/middleware/: __init__.py  rate_limit_middleware.py  security_headers_middleware.py
services/api-service/src/api_service/migrations/: env.py
services/api-service/src/api_service/migrations/versions/: 001_initial_schema.py  002_audit_indexes.py  003_seed_admin_user.py
services/api-service/src/api_service/models/: db_models.py
services/api-service/src/api_service/schemas/: analytics.py  auth.py  inspection.py
services/api-service/src/api_service/services/: auth_service.py  result_ingestion_service.py
services/api-service/tests/: conftest.py  test_health.py
services/api-service/tests/integration/: test_health.py
services/api-service/tests/unit/: test_auth_service.py  test_config.py  test_db_models.py  test_security_middleware.py
services/camera-simulator/: Dockerfile  pyproject.toml
services/camera-simulator/src/: config.py  schemas.py  simulator.py
services/camera-simulator/tests/: test_schemas.py
services/inference-service/: Dockerfile  pyproject.toml
services/inference-service/src/: main.py
services/inference-service/src/inference_service/: config.py  container.py  main.py  metrics.py
services/inference-service/src/inference_service/adapters/: fake_triton_adapter.py  kafka_consumer_adapter.py  kafka_publisher_adapter.py  triton_adapter.py
services/inference-service/src/inference_service/api/: middleware.py  routes.py
services/inference-service/src/inference_service/interfaces/: i_message_consumer.py  i_message_publisher.py  i_model_backend.py
services/inference-service/src/inference_service/schemas/: inspection.py  result.py
services/inference-service/src/inference_service/services/: ensemble_service.py  preprocessor.py
services/inference-service/src/inference_service/worker/: consumer_worker.py
services/inference-service/tests/: conftest.py
services/inference-service/tests/integration/: test_routes.py
services/inference-service/tests/unit/: test_config.py  test_ensemble_service.py  test_metrics.py  test_preprocessor.py
services/mlflow-server/: Dockerfile
tests/: README.md  conftest.py  docker-compose.test.yml  pyproject.toml  requirements.txt
tests/drift/: test_data_drift.py
tests/e2e/: test_auth_flow.py  test_inference_endpoint.py  test_inspection_flow.py
tests/fixtures/: images.py
tests/load/: test_load_basic.py
tests/model_promotion/: test_model_state_machine.py
training/: params.yaml  pyproject.toml
(+16 files in other folders)
