[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "factorymind-training"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch==2.4.1",
    "torchvision==0.19.1",
    "ultralytics==8.3.0",
    "transformers==4.45.1",
    "peft==0.13.0",
    "datasets==3.0.1",
    "accelerate==1.0.1",
    "anomalib==1.2.0",
    "opencv-python==4.10.0.84",
    "albumentations==1.4.18",
    "mlflow==2.16.2",
    "wandb==0.18.3",
    "dvc[s3]==3.55.2",
    "boto3==1.35.36",
    "numpy==1.26.4",
    "scikit-learn==1.5.2",
    "matplotlib==3.9.2",
    "pytorch-grad-cam==1.5.4",
    "great-expectations==0.18.21",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "ruff==0.6.9",
]
