[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.35",
    "asyncpg==0.29.0",
    "alembic==1.13.3",
    "redis==5.1.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "tenacity==9.0.0",
    "mlflow==2.16.2",
    "boto3==1.35.36",
    "confluent-kafka==2.5.3",
    "opentelemetry-sdk==1.27.0",
    "opentelemetry-instrumentation-fastapi==0.48b0",
    "prometheus-client==0.21.0",
    "httpx==0.27.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "anyio==4.6.0",
    "pytest-cov==5.0.0",
    "httpx==0.27.2",
    "ruff==0.6.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
