[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "camera-simulator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka==2.5.3",
    "fastavro==1.9.7",
    "pillow==10.4.0",
    "numpy==1.26.4",
    "pydantic-settings==2.5.2",
    "tqdm==4.66.5",
]
