[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inference-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "tritonclient[grpc]==2.49.0",
    "opencv-python-headless==4.10.0.84",
    "numpy==1.26.4",
    "pillow==10.4.0",
    "confluent-kafka==2.5.3",
    "fastavro==1.9.7",
    "sqlalchemy==2.0.35",
    "asyncpg==0.29.0",
    "redis==5.1.1",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "tenacity==9.0.0",
    "opentelemetry-sdk==1.27.0",
    "opentelemetry-instrumentation-fastapi==0.48b0",
    "prometheus-client==0.21.0",
    "torch==2.4.1",
    "torchvision==0.19.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-anyio==0.0.0",
    "anyio==4.6.0",
    "pytest-cov==5.0.0",
    "httpx==0.27.2",
    "ruff==0.6.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
